refactored java kindergarden-garden